--- a/public/main.css
+++ b/public/main.css
@@ -6,3 +6,30 @@
 body {
   font-family: 'Aguafina Script', cursive;
 }
+
+/* ____________ Nav Bar ____________ */
+
+#nav-bar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+#nav-bar-icon {
+  width: 4rem;
+}
+
+#nav-bar-icon img{
+  width: 100%;
+  height: auto;
+}
+
+#nav-bar-children-container {
+  display: flex;
+}
+
+#nav-bar-children-container * {
+  font-size: 1.2rem;
+  padding: 0.2em 0.4em;
+  margin: 0 0.5em;
+}
