refactor Register routes
refactored the register routes to be clearer as register parent
routes making way for seperate register child routes to be created

--- a/public/main.css
+++ b/public/main.css
@@ -7,7 +7,8 @@
 /* ____________ General Styles __________ */
 
 body {
-  font-family: var(--main-font-text)
+  font-family: var(--main-font-text);
+  color: var(--main-font-colour);
 }
 
 form {
