--- a/public/main.css
+++ b/public/main.css
@@ -32,6 +32,19 @@ form * {
   cursor: pointer;
 }
 
+.container {
+  margin-top: 1em;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.container .button {
+  font-size: 1.2rem;
+  padding: 0.4em 0.8em;
+  margin: 0.2em;
+}
 /* _______________ Nav Bar ______________ */
 
 #nav-bar {
